@@ -1,3 +1,9 @@
+2013-01-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclIntDecls.h: If TCL_NO_DEPRECATED is defined, make
+	sure that TIP #139 functions all are taken from the public stub
+	table, even if the inclusion is through tclInt.h.
+
 2013-01-09  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* library/http/http.tcl: [Bug 3599395]: http assumes status line
